feat: living documentation mvp spike for dns setup

--- a/components/rootmail.yaml
+++ b/components/rootmail.yaml
@@ -5,7 +5,6 @@ Parameters:
   Domain:
     Type: String
   Subdomain:
-    Default: aws
     Type: String
 
 Outputs:
@@ -347,6 +346,7 @@ Resources:
   RootmailReadyAlert:
     Type: AWS::CloudWatch::Alarm
     Properties:
+      AlarmName: superwerker-RootmailReady
       ComparisonOperator: GreaterThanOrEqualToThreshold
       Dimensions:
         - Name: FunctionName
