--- a/components/costs/cost-usage-report.yaml
+++ b/components/costs/cost-usage-report.yaml
@@ -5,39 +5,36 @@ Resources:
   CostBucket:
     Type: AWS::S3::Bucket
     Properties:
-      BucketName: superwerker-cost-usage-report
       LifecycleConfiguration:
         Rules:
           - Status: Enabled
             ExpirationInDays: 1095
 
   CostBucketPolicy:
-    Type: 'AWS::S3::BucketPolicy'
+    Type: AWS::S3::BucketPolicy
     Properties:
       Bucket: !Ref CostBucket
       PolicyDocument:
         Statement:
-          -
-            Action:
-              - 's3:GetBucketAcl'
-              - 's3:GetBucketPolicy'
+          - Action:
+              - s3:GetBucketAcl
+              - s3:GetBucketPolicy
             Effect: Allow
-            Resource:
-              'Fn::Join':
-                - ''
-                - - 'arn:aws:s3:::'
-                  - Ref: CostBucket
+            Resource: !Sub
+              - arn:aws:s3:::${bucket}
+              - bucket: !Ref CostBucket
             Principal:
               Service: 'billingreports.amazonaws.com'
-          -
-            Action:
-             - 's3:PutObject'
+          - Action:
+             - s3:PutObject
             Effect: Allow
-            Resource:
-              'Fn::Join':
-                - ''
-                - - 'arn:aws:s3:::'
-                  - Ref: CostBucket
-                  - '/*'
+            Resource: !Sub
+              - arn:aws:s3:::${bucket}/*
+              - bucket: !Ref CostBucket
             Principal:
               Service: 'billingreports.amazonaws.com'
+
+Outputs:
+  CostsReportBucket:
+    Value: !Ref CostBucket
+    Description: Costs and usage reports bucket
