cost-report: add public block to s3.

--- a/components/costs/cost-usage-report.yaml
+++ b/components/costs/cost-usage-report.yaml
@@ -5,6 +5,11 @@ Resources:
   CostBucket:
     Type: AWS::S3::Bucket
     Properties:
+      PublicAccessBlockConfiguration:
+        BlockPublicAcls: false
+        BlockPublicPolicy: false
+        IgnorePublicAcls: false
+        RestrictPublicBuckets: false
       LifecycleConfiguration:
         Rules:
           - Status: Enabled
