cost-report: add public block to s3.

--- a/components/costs/cost-usage-report.yaml
+++ b/components/costs/cost-usage-report.yaml
@@ -6,10 +6,10 @@ Resources:
     Type: AWS::S3::Bucket
     Properties:
       PublicAccessBlockConfiguration:
-        BlockPublicAcls: false
-        BlockPublicPolicy: false
-        IgnorePublicAcls: false
-        RestrictPublicBuckets: false
+        BlockPublicAcls: true
+        BlockPublicPolicy: true
+        IgnorePublicAcls: true
+        RestrictPublicBuckets: true
       LifecycleConfiguration:
         Rules:
           - Status: Enabled
@@ -29,7 +29,7 @@ Resources:
               - arn:aws:s3:::${bucket}
               - bucket: !Ref CostBucket
             Principal:
-              Service: 'billingreports.amazonaws.com'
+              Service: billingreports.amazonaws.com
           - Action:
              - s3:PutObject
             Effect: Allow
@@ -37,7 +37,7 @@ Resources:
               - arn:aws:s3:::${bucket}/*
               - bucket: !Ref CostBucket
             Principal:
-              Service: 'billingreports.amazonaws.com'
+              Service: billingreports.amazonaws.com
 
 Outputs:
   CostsReportBucket:
